--- a/street_wise/street-wise/index.html
+++ b/street_wise/street-wise/index.html
@@ -15,7 +15,7 @@
 
     <!-- Google Maps JS -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=&libraries=places"
+      src="https://maps.googleapis.com/maps/api/js?key=%VITE_GOOGLE_MAPS_API_KEY%&libraries=places"
     ></script>
   </head>
 
